--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -57,6 +57,11 @@
         background-color: #fff;
     }
 
+    .header-nav ul li{
+        display: flex;
+        justify-content: center;
+    }
+
     .header-lista{
         justify-content: center;
     }
