--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -74,6 +74,10 @@
         display: none;
     }
 
+    .notify{
+        right: 15px !important;
+    }
+
     .post-stats img{
         width: 6%;
         height: 6%;
